# rust_web2

./: .gitignore  ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: Home.vue  Users.vue
src/: db.rs  handlers.rs  main.rs  models.rs
